@@ -1,5 +1,6 @@
 Version 2.02.45 - 
 ===================================
+  Rename vg_read() to vg_read_internal().
 
 Version 2.02.44 - 26th January 2009
 ===================================
